# BMDECS

./: .gitignore  CMakeLists.txt  README.md
cmake/: MyMacros.cmake
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  entity.cpp
src/lib/Application/: Application.cpp  CMakeLists.txt
src/lib/Application/include/: Application.hpp
src/lib/ECS/: CMakeLists.txt  entity.cpp
src/lib/include/: component.hpp  entity.hpp
